// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmbedSlice component must replace tags 1`] = `
<div>
  <!---->
</div>
`;

exports[`EmbedSlice component should render correctly 1`] = `
<div>
  <div
    class="embed video"
  >
    <prismicembed-stub
      class="embed__video"
      field="[object Object]"
      target="_blank"
    />
     
    <!---->
  </div>
</div>
`;
